--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,25 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <!-- <button ion-item (click)="openPage('phonelines')">
+        <ion-icon name="call"></ion-icon> Phone Lines
+      </button> -->
+      <!-- <button ion-item (click)="openPage('billing')">
+        <ion-icon name="cash"></ion-icon> Billing
+      </button> -->
+      <!-- <button ion-item (click)="openPage('settings')">
+        <ion-icon name="cog"></ion-icon> Settings
+      </button> -->
+      <button ion-item (click)="doLogout()">
+        <ion-icon name="log-out"></ion-icon> Logout
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav #content [root]="rootPage"></ion-nav>
