Billing form enabled, paypal payment ok, pending billing list

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,9 +9,9 @@
       <!-- <button ion-item (click)="openPage('phonelines')">
         <ion-icon name="call"></ion-icon> Phone Lines
       </button> -->
-      <!-- <button ion-item (click)="openPage('billing')">
+      <button ion-item (click)="openPage('billing')">
         <ion-icon name="cash"></ion-icon> Billing
-      </button> -->
+      </button>
       <!-- <button ion-item (click)="openPage('settings')">
         <ion-icon name="cog"></ion-icon> Settings
       </button> -->
