Menu adaptado a ios version

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,11 +10,11 @@
         <ion-icon name="call"></ion-icon> Phone Lines
       </button> -->
       <button ion-item (click)="openPage('billing')">
-        <ion-icon name="cash"></ion-icon> Billing
+        <ion-icon name="cash"></ion-icon> Balance
       </button>
-      <!-- <button ion-item (click)="openPage('settings')">
-        <ion-icon name="cog"></ion-icon> Settings
-      </button> -->
+      <button ion-item (click)="openPage('settings')">
+        <ion-icon name="cog"></ion-icon>Phone call settings
+      </button>
       <button ion-item (click)="doLogout()">
         <ion-icon name="log-out"></ion-icon> Logout
       </button>
