--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,20 +1,34 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>
+        V-Phone
+      </ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
     <ion-list>
-      <!-- <button ion-item (click)="openPage('phonelines')">
-        <ion-icon name="call"></ion-icon> Phone Lines
-      </button> -->
+
+      <button ion-item>
+          v2.0.0
+      </button>
+
+      <button ion-item (click)="openPage('chkrates')">
+        <ion-icon name="cash"></ion-icon> Check rates
+      </button>
+
       <button ion-item (click)="openPage('billing')">
-        <ion-icon name="cash"></ion-icon> Balance
+          <ion-icon name="cash"></ion-icon> Balance
       </button>
+
+      <button ion-item (click)="openPage('profile')">
+          <ion-icon name="contact"></ion-icon> Profile
+      </button>
+
       <button ion-item (click)="openPage('settings')">
-        <ion-icon name="cog"></ion-icon>Phone call settings
+        <ion-icon name="cog"></ion-icon> Phone call settings
       </button>
+
       <button ion-item (click)="doLogout()">
         <ion-icon name="log-out"></ion-icon> Logout
       </button>
