--- a/src/pages/phonesettings/phonesettings.scss
+++ b/src/pages/phonesettings/phonesettings.scss
@@ -2,4 +2,9 @@ page-phonesettings {
   ion-select{
     max-width: 100% !important;
   }
+  ion-input {
+    input {
+      text-align: right;
+    }
+  }
 }
